--- a/deploy/Pre/deployment.yaml
+++ b/deploy/Pre/deployment.yaml
@@ -20,6 +20,7 @@ spec:
           image: imageRegistry/appVersion
           ports:
             - containerPort: 8080
+          imagePullPolicy: Always
           resources: {}
       restartPolicy: Always
 status: {}
