se agrega remplazo de los nuevos label

--- a/deploy/PRE/deployment.yaml
+++ b/deploy/PRE/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: rancher-demo
   labels:
     app: jobBaseName
+    version: appVersion
+    build: numberBuildJob
 spec:
   replicas: 1
   selector:
