--- a/deploy/Integracion/deployment.yaml
+++ b/deploy/Integracion/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: jobBaseName
   labels:
     app: jobBaseName
+    version: appVersion
+    build: numberBuildJob
 spec:
   replicas: 1
   selector:
