se modifica value template

--- a/deploy/PRE/deployment.yaml
+++ b/deploy/PRE/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: rancher-demo
   labels:
     app: jobBaseName
-    version: "Version"
+    version: "{{Version}}"
     build: "numberBuildJob"
 spec:
   replicas: 1
