--- a/deploy/QA/deployment.yaml
+++ b/deploy/QA/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: jobBaseName
   labels:
     app: jobBaseName
-    version: "Version"
+    version: "{{Version}}"
     build: "numberBuildJob"
 spec:
   replicas: 1
