se agrega construccion y publicacion de la imagen

--- a/deploy/PROD-G/deployment.yaml
+++ b/deploy/PROD-G/deployment.yaml
@@ -51,7 +51,7 @@ spec:
         - name: gcr
       containers:
         - name: rancher-demo
-          image: monachus/rancher-demo
+          image: ${CICD_IMAGE}:lastest
           ports:
             - containerPort: 8080
           imagePullPolicy: Always
