--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -1,4 +1,15 @@
 stages:
+- name: Publish image
+  when:
+    branch: master
+    event: [ push, pull_request ]
+  steps:
+  - publishImageConfig:
+      dockerfilePath: ./Dockerfile
+      buildContext: .
+      tag: ${CICD_GIT_REPO_NAME}:lastest
+      pushRemote: true
+      registry: gcr.io/imed-cl
 - name: Deploy
   when:
     branch: master
