--- a/deploy/Integracion/deployment.yaml
+++ b/deploy/Integracion/deployment.yaml
@@ -19,9 +19,15 @@ spec:
       containers:
         - name: jobBaseName
           image: imageRegistry/appVersion
+          env:
+            - name: TZ
           ports:
             - containerPort: 8080
           imagePullPolicy: Always
+          lifecycle:
+            postStart:
+              exec:
+                command: ["/bin/ash", "-c", "apk add tzdata && cp /usr/share/zoneinfo/$TZ /etc/localtime && apk del tzdata && date"]
           resources: {}
       restartPolicy: Always
 status: {}
