--- a/deploy/QA/deployment.yaml
+++ b/deploy/QA/deployment.yaml
@@ -24,6 +24,10 @@ spec:
           ports:
             - containerPort: 8080
           imagePullPolicy: Always
+          lifecycle:
+            postStart:
+              exec:
+                command: ["/bin/ash", "-c", "apk add tzdata && cp /usr/share/zoneinfo/$TZ /etc/localtime && apk del tzdata && date"]
           resources: {}
       restartPolicy: Always
 status: {}
