--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -9,14 +9,14 @@ stages:
       buildContext: .
       tag: ${CICD_GIT_REPO_NAME}:lastest
       pushRemote: true
-      registry: gcr.io/imed-cl
-- name: Deploy
-  when:
-    branch: master
-    event: [ push, pull_request ]
-  steps:
-  - applyYamlConfig:
-      path: ./deploy/PROD-G/deployment.yaml
-branch:
-  include: [ master ]
+      registry: https://hub.docker.com/u/infoubicatecl/
+# - name: Deploy
+#   when:
+#     branch: master
+#     event: [ push, pull_request ]
+#   steps:
+#   - applyYamlConfig:
+#       path: ./deploy/PROD-G/deployment.yaml
+# branch:
+#   include: [ master ]
 notification: {}
