--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -14,6 +14,6 @@ stages:
 #   steps:
 #   - applyYamlConfig:
 #       path: ./deploy/PROD-G/deployment.yaml
-# branch:
-#   include: [ master ]
+branch:
+    include: [ develop ]
 notification: {}
