--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -4,9 +4,9 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: ${CICD_GIT_REPO_NAME}:lastest
+      tag: ${CICD_GIT_REPO_NAME}:latest
       pushRemote: true
-      registry: 127.0.0.1:34573
+      registry: index.docker.io
 branch:
   include:
   - master
