--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,38 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: helloworld
+  name: rancher-demo
 spec:
   selector:
     matchLabels:
-      app: helloworld
+      app: rancher-demo
   replicas: 1 
   template: 
     metadata:
       labels:
-        app: helloworld
+        app: rancher-demo
     spec:
       containers:
-      - name: helloworld
-        image: infoubicatecl/helloworld:latest
+      - name: rancher-demo
+        image: infoubicatecl/rancher-demo:latest
         ports:
         - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
- name: helloworld
+ name: rancher-demo
 spec:
  type: NodePort
  selector:
-   app: helloworld
+   app: rancher-demo
  ports:
    - name: client
      protocol: TCP
      port: 80
      nodePort: 32080
  selector:
-   app: helloworld
+   app: rancher-demo
 
 
 
